--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
     "private": true,
+    "browserslist": [
+        "> 1%",
+        "ie > 9"
+    ],
     "scripts": {
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -15,6 +19,8 @@
         "less-loader": "^5.0.0"
     },
     "dependencies": {
-        "cross-env": "^5.2.0"
+        "cross-env": "^5.2.0",
+        "css-mqpacker": "^7.0.0",
+        "postcss-cli": "^6.1.3"
     }
 }
