Add brands page

--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js": "/js/app.js"
+    "/js/v-app.js": "/js/v-app.js?id=f340de6248d9b7881642",
+    "/css/app.css": "/css/app.css?id=2fb0e54507cf42e13c4a",
+    "/js/app.js": "/js/app.js?id=2d880b95a53c89a1d898"
 }
