Changes in header section

--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js": "/js/app.js"
+    "/js/v-app.js": "/js/v-app.js?id=77493e51ffaa38075feb",
+    "/css/app.css": "/css/app.css?id=2ddbd1347ef9a9ced009",
+    "/js/app.js": "/js/app.js?id=9078f45c15d36c83da74"
 }
