Developing collection page #3

--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js": "/js/app.js"
+    "/js/v-app.js": "/js/v-app.js?id=a5df3f486db65177ee15",
+    "/css/app.css": "/css/app.css?id=7ad175c8faf2dae00cb4",
+    "/js/app.js": "/js/app.js?id=17cb7028049bd4875ecb"
 }
