Fucking filters aargh >_<

--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js?id=f01593480638daae747e",
-    "/css/app.css": "/css/app.css?id=62dd0992989619404f01",
-    "/js/app.js": "/js/app.js?id=85adfc0eee5540506296"
+    "/js/v-app.js": "/js/v-app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/app.js": "/js/app.js"
 }
