--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.2",
         "css-mqpacker": "^7.0.0",
-        "less": "^3.9.0",
         "laravel-mix": "^4.0.7",
+        "less": "^3.9.0",
         "less-loader": "^5.0.0",
         "postcss-cli": "^6.1.3",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "nouislider": "^14.0.3",
-        "vue": "^2.6.10",
-        "vue-resource": "^1.5.1",
+        "axios": "^0.19.0",
+        "nouislider": "^14.1.0",
+        "vue": "^2.6.11",
         "vuelidate": "^0.7.4",
-        "vuex": "^3.1.1"
+        "vuex": "^3.1.2"
     }
 }
