--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js": "/js/app.js"
+    "/js/v-app.js": "/js/v-app.js?id=3650589a05b168896dc9",
+    "/css/app.css": "/css/app.css?id=ee69e1b3fe306d390552",
+    "/js/app.js": "/js/app.js?id=fa96eac7319bf51fa514"
 }
