--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js?id=49d78a10ebcdc5aa0bf0",
-    "/css/app.css": "/css/app.css?id=ee69e1b3fe306d390552",
-    "/js/app.js": "/js/app.js?id=8c9084359a2c07addd86"
+    "/js/v-app.js": "/js/v-app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/app.js": "/js/app.js"
 }
