--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js": "/js/app.js"
+    "/js/v-app.js": "/js/v-app.js?id=09e14910a6cd147c11d8",
+    "/css/app.css": "/css/app.css?id=6c4136d36c8a7e93f228",
+    "/js/app.js": "/js/app.js?id=28d826bb96912d8476b2"
 }
