Vuex store refactoring

--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js?id=aec54ef72b4c2151373b",
-    "/css/app.css": "/css/app.css?id=562f0cc105ca8fa73b00",
-    "/js/app.js": "/js/app.js?id=9e7f402aeec44da4e306"
+    "/js/v-app.js": "/js/v-app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/app.js": "/js/app.js"
 }
