Optimize recursive collection children search. Reorganize filters.

--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js": "/js/app.js"
+    "/js/v-app.js": "/js/v-app.js?id=b6fa5068370aa5147c71",
+    "/css/app.css": "/css/app.css?id=ecfb9169eeab6c82edf4",
+    "/js/app.js": "/js/app.js?id=dbfe500894b1b7f22627"
 }
