Make my first package for laravel (XmlParser)

--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,18 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "packages/wsn/xml-parser"
+        }
+    ],
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "wsn/xml-parser": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
