--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js?id=f5d6a1885cf2bf650f4d",
-    "/css/app.css": "/css/app.css?id=2bfcd273135a8648bfe9",
-    "/js/app.js": "/js/app.js?id=48e926af30ac8959a05e"
+    "/js/v-app.js": "/js/v-app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/app.js": "/js/app.js"
 }
