--- a/public_html/mix-manifest.json
+++ b/public_html/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js": "/js/app.js"
+    "/js/v-app.js": "/js/v-app.js?id=e71ea6ef392e343e08bc",
+    "/css/app.css": "/css/app.css?id=1eba3db4f83fab97680b",
+    "/js/app.js": "/js/app.js?id=533038391f865fe453c5"
 }
