Filter config saves to url. Add sizes API

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js?id=2b7403fe5de9fc5fdf98",
-    "/css/app.css": "/css/app.css?id=81d6729dcfbcfd578702",
-    "/js/app.js": "/js/app.js?id=547745d762974fb72354"
+    "/js/v-app.js": "/js/v-app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/app.js": "/js/app.js"
 }
