--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/v-app.js": "/js/v-app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.js": "/js/app.js"
+    "/js/v-app.js": "/js/v-app.js?id=8578b9e1f676c6e6fd12",
+    "/css/app.css": "/css/app.css?id=81d6729dcfbcfd578702",
+    "/js/app.js": "/js/app.js?id=3fedb6319963cd7512e7"
 }
