--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
+        "bootstrap": "^4.4.1",
+        "jquery": "^3.4.1",
+        "jquery-ui": "^1.12.1",
+        "materialize-css": "^1.0.0-rc.2",
         "nouislider": "^14.1.0",
+        "slick-carousel": "^1.8.1",
         "vue": "^2.6.11",
         "vuelidate": "^0.7.4",
         "vuex": "^3.1.2"
