--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/v-app.js": "/js/v-app.js?id=cd96882139b90938a970",
-    "/css/app.css": "/css/app.css?id=29523676c32d63ab3947",
-    "/js/app.js": "/js/app.js?id=88398756eb614166f21b"
+    "/js/app.js": "/js/app.js?id=faadfbcf20c5166afd96",
+    "/css/app.css": "/css/app.css?id=3f4e688ba6fd7e5c03d4"
 }
