--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=fa9838456209d93a787b",
-    "/css/app.css": "/css/app.css?id=09a7679d1eb0b5c3550c"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
