Cart API and new one design

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=60c453b29bbe5d2fbfc7",
+    "/css/app.css": "/css/app.css?id=b6cbfb2f468ee56f28d2"
 }
