--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
         "cross-env": "^5.2",
         "css-mqpacker": "^7.0.0",
         "laravel-mix": "^4.0.7",
-        "less": "^3.9.0",
+        "less": "^3.11.1",
         "less-loader": "^5.0.0",
         "postcss-cli": "^6.1.3",
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "axios": "^0.19.0",
+        "axios": "^0.19.2",
         "bootstrap": "^4.4.1",
         "jquery": "^3.4.1",
         "jquery-ui": "^1.12.1",
-        "materialize-css": "^1.0.0-rc.2",
-        "nouislider": "^14.1.0",
+        "materialize-css": "^1.0.0",
+        "nouislider": "^14.1.1",
         "slick-carousel": "^1.8.1",
         "vue": "^2.6.11",
-        "vuelidate": "^0.7.4",
+        "vuelidate": "^0.7.5",
         "vuex": "^3.1.2"
     }
 }
